--- a/css/blocks/container.less
+++ b/css/blocks/container.less
@@ -1,1 +1,12 @@
 // main: ../style.less
+
+
+
+.container {
+    width: 100%;
+    max-width: 1440px;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin: 0 auto;
+    
+}
