--- a/css/blocks/header.less
+++ b/css/blocks/header.less
@@ -1,1 +1,23 @@
 // main: ../style.less
+
+
+
+.header{
+    display: flex;
+    background-color: #323233;
+    height: 70px;
+    align-items: center;
+
+}
+
+
+.header__burger{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header__contact{
+    display: flex;
+    flex-direction: column;
+}
