--- a/css/blocks/section.less
+++ b/css/blocks/section.less
@@ -1,5 +1,24 @@
 // main: ../style.less
 
 .section{
-    background-image: url(/images/6b2a7ebee3612172d838fca35f909eb0.png);
+
+    background: url(/images/6b2a7ebee3612172d838fca35f909eb0.png) no-repeat center center/cover;
+    
+}
+
+.section__heading{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 400px;
+    color: white;
+}
+
+.section__btn{
+    width: 293px;
+    height: 60px;
+    border-radius: 30px;
+    background-color: #DD3037;
+    border: none;
 }
