--- a/css/blocks/section.less
+++ b/css/blocks/section.less
@@ -3,7 +3,7 @@
 .section{
 
     background: url(/images/6b2a7ebee3612172d838fca35f909eb0.png) no-repeat center center/cover;
-    
+    background-position: 30%  60%;
 }
 
 .section__heading{
