--- a/css/blocks/container.less
+++ b/css/blocks/container.less
@@ -10,3 +10,13 @@
     margin: 0 auto;
     
 }
+
+
+.container_2 {
+    width: 100%;
+    max-width: 1440px;
+    padding-left: 277px;
+    padding-right: 277px;
+    margin: 0 auto;
+    
+}
