--- a/css/blocks/section_company.less
+++ b/css/blocks/section_company.less
@@ -8,6 +8,11 @@
 
 
 .section_company__status{
-    width: 242px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
+    width: 273px;
     height: 149px;
 }
