--- a/css/style.less
+++ b/css/style.less
@@ -24,7 +24,7 @@ html {
  }
  
  p {
-     margin: 0 0 1rem;
+     margin: 0 0 0rem;
  }
  
  *,
@@ -38,4 +38,5 @@ html {
  @import "blocks/container";
  @import "blocks/section";
  @import "blocks/section_company";
+ @import "blocks/section_job_openings";
  
