--- a/css/blocks/section_job_openings.less
+++ b/css/blocks/section_job_openings.less
@@ -4,3 +4,30 @@
     background-color: #212121;
     height: 1304px;
 }
+
+.section_job_openings__link{
+    display: flex;
+    align-items: center;
+    height: 55px;
+    padding: 12px 30px ;
+    border: 3px solid #999999;
+    border-radius: 10px;
+    font-weight: 500;
+    font-size: 20px;
+    color: white;
+   
+    transition: background-color .2s linear,color .2s linear,box-shadow .2s linear,border-color .2s linear;
+}
+
+.section_job_openings__link:hover{
+    background-color: #999999;
+}
+
+
+.section_job__post{
+    width: 100%;
+    max-width: 745px; 
+    max-height:160px;
+    border: 3px solid #999999;
+    border-radius: 30px;
+}
