--- a/css/blocks/container.less
+++ b/css/blocks/container.less
@@ -15,8 +15,8 @@
 .container_2 {
     width: 100%;
     max-width: 1440px;
-    padding-left: 277px;
-    padding-right: 277px;
+    padding-left: 1rem;
+    padding-right: 1rem;
     margin: 0 auto;
     
 }
