--- a/css/style.less
+++ b/css/style.less
@@ -43,4 +43,5 @@ html {
  @import "blocks/section";
  @import "blocks/section_company";
  @import "blocks/section_job_openings";
+ @import "blocks/section_advantages";
  
