--- a/css/style.less
+++ b/css/style.less
@@ -44,4 +44,5 @@ html {
  @import "blocks/section_company";
  @import "blocks/section_job_openings";
  @import "blocks/section_advantages";
+ @import "blocks/section_projects";
  
