--- a/css/blocks/section_projects.less
+++ b/css/blocks/section_projects.less
@@ -26,6 +26,7 @@
 
 .swiper{
   width: 100%;
+  margin-top: 35px;
 }
 
 .swiper-wrapper{
@@ -33,15 +34,15 @@
   height: 35em;
   display: flex;
   align-items: center;
-  padding-bottom: 20px;
+  padding-bottom: 45px;
 }
 
 .card{
   max-width:38.625rem  ;
   width: 100%;
   height: 90%;
-  background-color: white;
-  border-radius: 2em;
+  background-color: rgb(75, 75, 75);
+  border-radius: 30px;
   box-shadow: 0 0 2em rgba(0, 0, 0, 0.2);
   
   display: flex;
@@ -50,24 +51,28 @@
   
 }
 
-.swiper-slide:not(.swiper-slide-active){
-  filter: blur(1px);
+.swiper-slide{
+  
+  overflow: hidden;
+  border-radius: 30px;
 }
 
 .card_image{
   width: 100%;
   height: 100%;
-  border-radius: 50%;
+
+  
+  padding: 8px;
   
   
-  object-fit: cover;
+  
 }
 
 .card_image img{
   width: 100%;
   height: 100%;
   border-radius: 30px;
-  object-fit: cover;
+  object-fit: fill;
 }
 
 .card_content{
@@ -111,22 +116,27 @@
 .swiper-pagination-bullet{
   width: 14px;
   height: 14px;
-  background-color: rgb(214, 33, 33);
+  background-color: rgb(82, 82, 82);
   border-radius: 50%;
   transition: all 0.3s ease-in-out;
 }
 
 .swiper-pagination-bullet-active{
   width: 32px;
-  background-color: black;
+  background-color: rgb(255, 255, 255);
   border-radius: 14px;
 }
 
 .swiper-button-next,
 .swiper-button-prev {
-    
+    width: 40px;
+
    top: 280px;
     padding: 30px;
-    color: #000;
+    color: #ffffff;
     
 }
+
+.swiper-button-next:after, .swiper-button-prev:after{
+    font-weight: 900;
+} 
