--- a/css/style.less
+++ b/css/style.less
@@ -45,4 +45,5 @@ html {
  @import "blocks/section_job_openings";
  @import "blocks/section_advantages";
  @import "blocks/section_projects";
+ @import "blocks/section_career__growth";
  
