--- a/css/style.less
+++ b/css/style.less
@@ -46,4 +46,5 @@ html {
  @import "blocks/section_advantages";
  @import "blocks/section_projects";
  @import "blocks/section_career__growth";
+ @import "blocks/section_success";
  
