--- a/css/style.less
+++ b/css/style.less
@@ -13,11 +13,28 @@ html {
      font-family: 'Montserrat', sans-serif;
      font-size: 1rem;
      color: black;
- 
-     &.no-scroll {
-         overflow: hidden;
-     }
  }
+
+
+
+ 
+ html {
+    overflow: scroll;
+    overflow-x: hidden;
+     }
+    ::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+      }
+    /* optional: show position indicator in red */
+    ::-webkit-scrollbar-thumb {
+    background: #FF0000;
+     }
+
+
+
+
+
  
  h1, h2, h3, h4, h5, h6 {
      margin: 0;
