Реализовано кнопка при которой открывается описание
- Добавлено описание для вакансий
- Добавлена CSS анимация для высоты в .section_job__post
- Реализовано вращение изображения при клике с использованием JavaScript"

--- a/css/blocks/section_job_openings.less
+++ b/css/blocks/section_job_openings.less
@@ -31,3 +31,13 @@
     border: 3px solid #999999;
     border-radius: 30px;
 }
+
+
+#section_job__img.rotated{
+    transform: rotate(180deg);
+
+}
+
+.image2 {
+    transition: transform 0.2s; /* Плавное вращение изображения */
+  }
