--- a/css/style.less
+++ b/css/style.less
@@ -64,4 +64,4 @@ html {
  @import "blocks/section_projects";
  @import "blocks/section_career__growth";
  @import "blocks/section_success";
- 
+ @import "blocks/Modalwindow";
