--- a/css/blocks/Modalwindow.less
+++ b/css/blocks/Modalwindow.less
@@ -3,7 +3,7 @@
 .modal {
     display: none; /* Скрыто по умолчанию */
     position: fixed;
-    z-index: 1;
+    z-index: 9999;
     left: 0;
     top: 0;
     width: 100%;
@@ -15,14 +15,34 @@
 }
 
 .modal-content {
-    background-color: #fff;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    max-width: 500px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+
+    
+}
+
+.modal-body{
+    overflow-y: auto;
+    position: relative;
+    margin: 0 24px;
+    max-height: 100%;
+    max-width: 900px;
+
+}
+
+.modal-inner{
+    background-color: #1f1f1f;
+    height: 100%;
+    padding: 70px;
+
+    color: #fff;
     border-radius: 10px;
+    position: relative;
+    margin: 24px 0;
+
 }
 
 .close {
@@ -30,6 +50,14 @@
     float: right;
     font-size: 28px;
     font-weight: bold;
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    cursor: pointer;
+    font-size: 20px;
+    z-index: 99999;
+      
+
 }
 
 .close:hover,
@@ -43,3 +71,11 @@
     display: block;
     opacity: 1; /* Видимость при показе */
 }
+
+
+
+
+body.modal-open {
+    overflow: hidden !important;
+}
+
