--- a/css/blocks/section.less
+++ b/css/blocks/section.less
@@ -2,7 +2,7 @@
 
 .section{
 
-    background: url(/images/fon.png) no-repeat center center/cover;
+    background: url(images/fon.png) no-repeat center center/cover;
     background-position: 69%  42%;
 }
 
